bootstrap collapse fix

--- a/develop/style.css
+++ b/develop/style.css
@@ -183,6 +183,7 @@ iframe{
     border-radius: 5px;
     box-shadow: 0 0 75px #eaeaea;
     margin-bottom: 3%;
+    cursor: pointer; /*For bootstrap collapse on iPhone*/ 
 }
 
 .academic-tile:hover{
